# EGO

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/pipeline/: ego_end_to_end.yaml
configs/step1/: assembly101_vjepa2.yaml  ego4d_vjepa2.yaml  ek100_vjepa2.yaml  inference.yaml
configs/step2/: b0_full_trace_dpo.yaml  f0_final_v2_wm_only.yaml  f0_final_wm_only.yaml  grpo_stage1_noun.yaml  grpo_stage2_action.yaml  rewards.yaml  sft_qwen25vl_baseline.yaml  sft_qwen3vl.yaml
configs/step3/: memory.yaml  planning_eval.yaml  trigger.yaml
configs/vpa/: vpa_config.example.yaml
data/: README.md
develop_report/: 2026-07-11_step1-ek100-assembly101-refactor.md  2026-07-12_ego4d-lta-handoff-summary.md  2026-07-12_ego4d-lta-z1-scaffold.md
docs/: NAMING.md  architecture.md  datasets.md  evaluation.md  interfaces.md  step1_action_anticipation.md  step2_vlm_alignment.md  step3_dynamic_planning.md
docs/experiments/: README.md  (+37 more)
pipelines/: run_end_to_end.py  step1_to_step2.py  step2_to_step3.py
requirements/: base.txt  dev.txt  step1.txt  step2.txt  step3.txt
schemas/: memory_state.schema.json  planning_trajectory.schema.json  step1_candidates.schema.json  step2_policy_output.schema.json
step2_vlm_grpo/: HANDOFF.md  README.md
tools/: cce_artifact.py  cce_dashboard.py  ego_progress_dashboard.py  expc_dashboard.py  goalstep_experiments_dashboard.py  goalstep_live_dashboard.py  headroom_artifact.py  headroom_dashboard.py  night_dashboard.py  p3_cons_artifact.py  p3_cons_dashboard.py  p3_smoke_trend.py  write_goalstep_endpoint_report.py
(+463 files in other folders)
